--- a/spring-social-showcase-boot/build.gradle
+++ b/spring-social-showcase-boot/build.gradle
@@ -28,6 +28,7 @@ eclipse {
 repositories {
   mavenLocal()
   maven { url "http://repo.spring.io/milestone" }
+  maven { url 'http://repo.spring.io/snapshot' }
   mavenCentral()
   maven { url "http://repo.spring.io/libs-milestone" }
 }
