--- a/spring-social-showcase-sec/src/main/resources/application.properties
+++ b/spring-social-showcase-sec/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-facebook.appKey={{SEE README}}
-facebook.appSecret={{SEE README}}
-facebook.appNamespace={{SEE README}}
+facebook.appKey=722299324558860
+facebook.appSecret=c14fe6132164ab02878f8dcad335d07f
+facebook.appNamespace=
 twitter.appKey={{SEE README}}
 twitter.appSecret={{SEE README}}
 linkedin.appKey={{SEE README}}
